--- a/src/Monitor/Monitor.module.css
+++ b/src/Monitor/Monitor.module.css
@@ -1,3 +1,14 @@
+.stopShield{
+    border: 3px solid #0c3135;
+    background-color: white;
+    width: 95vw;
+    max-width: 35rem;
+    margin: 0 auto;
+    margin-bottom: 5px;
+    font-size: 1.2rem;
+    font-weight: 800;
+}
+
 .monitor{
     border: 10px solid #0c3135;
     background-color: #2a484c;
