--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
   text-align: center;
 }
 
 body{
   background-color: #a23a3f !important;
+  display: flex;
+  justify-content: center;
 }
